# caprice-lang

./: .gitignore  LICENSE  README.md  caprice.opam  dune  dune-project  makefile  tmp.caprice  todo-list.txt
caprice-language-extension/: README.md  language-configuration.json  package-lock.json  package.json
caprice-language-extension/syntaxes/: caprice.tmLanguage.json
caprice-language-extension/themes/: caprice-dark.json
src-test/: ctl_ast.ml  ctl_lexer.mll  ctl_parser.mly  ctl_semantics.ml  dune  environment.ml  main.ml  parse_ctl.ml  preset.ml  variables.ml
src-test/typecheck/: dune  test_typecheck.ml
src/concolic/: dune  effects.ml  eval.ml  loop.ml  main.ml  monad.ml  options.ml
src/concolic/common/: answer.ml  cdata.ml  check_result.ml  cvalue.ml  eval_result.ml  formula.ml  ienv.ml  label.ml  logged_run.ml  options.ml  path.ml  stepkey.ml  target.ml  target_queue.ml  timed_label.ml
src/grammar/: answer.ml  cdata.ml  dune  eval_result.ml  formula.ml  input.ml  input_env.ml  keyed_tag.ml  lazy_val.ml  logged_run.ml  path.ml  path_item.ml  path_length.ml  path_priority.ml  rev_stem.ml  step.ml  stepkey.ml  tag.ml  target.ml  target_queue.ml  val.ml
src/interp/: dune  effects.ml  input.ml  input_env.ml  keyed_label.ml  label.ml  step.ml  tag.ml
src/interp_common/: dune  effects.ml  step.ml
src/lang/: ast.ml  binop.ml  capriceLexerDesc.mll  capriceParserDesc.mly  dune  env.ml  ident.ml  labels.ml  parser.ml  pattern.ml  value.ml
src/lang/features/: funtype.ml  record.ml  refinement.ml  variant.ml
src/overlays/: dune  typed_z3.ml
src/smt/: binop.ml  dune  formula.ml  model.ml  symbol.ml
src/utils/: comparable.ml  counter.ml  diff_list.ml  dune  empty.ml  identity.ml  list_utils.ml  safe_cell.ml  separate.ml  set_map.ml  time.ml  types.ml  uid.ml
test/bluejay-ill-typed/: adapter_record.caprice  avl_tree1.caprice  avl_tree2.caprice  avl_tree_instance.caprice  continuation_bind1.caprice  continuation_bind2.caprice  continuation_bind_usage.caprice  decorator_timer.caprice  duck_typing_colors1.caprice  duck_typing_colors2.caprice  flyweight_color1.caprice  flyweight_color2.caprice  flyweight_color3.caprice  insertion_sort1.caprice  insertion_sort2.caprice  list_take_n.caprice  ngrams.caprice  ngrams_instance.caprice  poly_casting_applied.caprice  poly_compose.caprice  poly_fold2_map2.caprice  poly_sgn.caprice  rec_dep_polymorphism.caprice  rec_polymorphism.caprice  recursively_refined.caprice  set_module.caprice  sub_higher_order_fun.caprice  sub_implied_type.caprice  variant_obj.caprice  visitor_tree1.caprice  visitor_tree2.caprice  visitor_tree3.caprice  visitor_variant.caprice
test/bluejay-well-typed/: adapter_record.caprice  decorator_timer.caprice  duck_typing_colors.caprice  flyweight_color.caprice  poly_casting_applied.caprice  poly_compose.caprice  visitor_accept.caprice
test/ocaml-functors/: README
test/programs/: ack.caprice  bintree_fold.caprice  bintree_is_ordered.caprice  bintree_lib.caprice  compose_list.caprice  cps_monad.caprice  cps_monad_ho_sub.caprice  cps_summate.caprice  deep_match.caprice  difference_lists.caprice  drop_value.caprice  fact.caprice  factors.caprice  fib.caprice  filter.caprice  fold_left_until.caprice  gcd_lcm.caprice  gen.caprice  hmap.caprice  is_prime.caprice  length.caprice  list_is_ordered.caprice  match_tl.caprice  merge_sort.caprice  mk_fun_type.caprice  mu_hkt.caprice  mult_double.caprice  nonempty_map.caprice  poly_fold2_map2.caprice  range.caprice  refinement_downcast.caprice  reverse.caprice  set_max.caprice  set_module.caprice  state_monad_dyn_arity.caprice  state_monad_result_sum.caprice  statement_list.caprice  sum_if.caprice  sum_matrix.caprice  summate.caprice
test/programs-well-typed/: cps_monad.caprice  set_max.caprice
test/simple-ill-typed/: concat_len.caprice  dep_fun.caprice  dep_sum.caprice  dep_type.caprice  even_to_odd.caprice  flow_sensitive.caprice  fun_subtype.caprice  gen_dep_fun_subtype.caprice  ho_fun_appl.caprice  ho_fun_left.caprice  ho_fun_right.caprice  id_fun.caprice  inspect_poly_directly.caprice  inspect_poly_nested.caprice  let_int.caprice  list_map.caprice  make_list.caprice  nested_tuple_left.caprice  nested_tuple_right.caprice  poly_fst.caprice  prepend.caprice  record.caprice  record_ab.caprice  record_check_independence.caprice  singletype_bool_int.caprice  singletype_int_bool.caprice  singletype_module.caprice  singletype_payload.caprice  singletype_poly.caprice  singletype_variant.caprice  tuple_left.caprice  tuple_right.caprice
test/simple-well-typed/: dep_fun_parsing.caprice  dep_type.caprice  even_to_odd.caprice  fork_max_step.caprice  gen_fun.caprice  ho_fun_appl.caprice  id.caprice  id_fun.caprice  list_map.caprice  list_map_dep.caprice  make_list.caprice  nested_record.caprice  nested_tuple_left.caprice  nested_tuple_right.caprice  nested_variant_type.caprice  poly_appl.caprice  poly_fst.caprice  record_ab.caprice  record_refine.caprice  self_returning.caprice  singletype_int.caprice  singletype_module.caprice  singletype_poly.caprice  singletype_variant.caprice  static_lists.caprice  static_tree.caprice  sub_record_fun.caprice  subtype.caprice  tuple.caprice  tuple_assoc.caprice
test/soft-contract-ill-typed/: all.caprice  append.caprice  (+24 more)
(+412 files in other folders)
