
(library
 (name grammar)
 (public_name caprice.grammar)
 (libraries
  ; internal
  lang
  smt
  utils
  ; external
  cmdliner
  mtime
  psq
 )
 (synopsis "Non-AST grammar for Caprice")
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord ppx_deriving.show)))
