
(library
 (name interp)
 (public_name caprice.interp)
 (libraries
  ; internal
  lang
  smt
 )
 (synopsis "Interpreter utilities for Caprice")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord)))
