
(library
 (name interp)
 (public_name caprice.interp)
 (libraries
  ; internal
  lang
  smt
  ; external
  cmdliner
 )
 (synopsis "Interpreter utilities for Caprice")
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord)))
