
(library
 (name interp_common)
 (public_name caprice.interp_common)
 (libraries
  ; internal
  lang
 )
 (synopsis "Interpreter utilities for Caprice")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord)))
