(include_subdirs unqualified)

(ocamllex capriceLexerDesc)

(menhir
 (modules capriceParserDesc))

(library
 (name lang)
 (public_name caprice.lang)
 (synopsis "Caprice Language Definition")
 (modules (:standard))
 (libraries 
  ; internal
  utils 
  ; external
  baby
  cmdliner
 )
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord))
)
  