
(library
 (name overlays)
 (public_name caprice.overlays)
 (synopsis "External library overlays for Caprice")
 (modules (:standard))
 (libraries
  ; internal
  smt
  ; external
  z3
 )
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord))
)