
(library
 (name utils)
 (public_name caprice.utils)
 (synopsis "Caprice Utility Modules")
 (modules (:standard))
 (libraries
  ; external
  baby
  mtime
  mtime.clock
 )
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord))
)